--- a/projects/project_page_styles.css
+++ b/projects/project_page_styles.css
@@ -58,6 +58,7 @@ body {
     font-size: 4rem;
     font-weight: 300;
     margin: 0;
+    color: white;
 }
 
 
